# fastapi-gestao-escolar

./: .env  README.md  banco.db  pyproject.toml
app/: db.py  main.py
app/core/: database.py
app/models/: __init__.py  cursos.py  estudantes.py
app/routers/: courses.py  students.py
app/schemas/: courses.py  students.py
migrations/versions/: a569de9a3429_first_migrate.py
