[project]
name = "meu-projeto"
version = "0.1.0"
description = ""
authors = [
    {name = "Enzo",email = "enzosilvafeiras@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]

[tool.poetry]
packages = [{include = "meu_projeto", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
